--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ html {
     color: #CCCCCC;
 }
 
-a {
+.link {
     color: #0EC9E6;
     font-size: 12px;
     font-weight: 600;
 }
 
-a:visited {
+.link:visited {
     color: #0EC9E6;
 }
 
@@ -54,14 +54,17 @@ a:visited {
 }
 
 .object-button {
+    display: flex;
+
     background-color: #1C1C1C;
     width: 82px;
+    height: 82px;
     border-radius: 8px;
     border: #343434 solid 3px;
     aspect-ratio:  1 / 1;
 
-    text-align: center;
-    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
 
     font-size: 36px;
 }
@@ -72,7 +75,7 @@ a:visited {
     top: 0;
     left: 0;
     background-color: #0000007b;
-    width: 82px;
+    width: 100%;
     border-radius: 8px;
     border: none;
     aspect-ratio:  1 / 1;
