--- a/colorPicker_style.css
+++ b/colorPicker_style.css
@@ -133,6 +133,7 @@
         padding: 20px;
 
         width: 16%;
+        min-width: 150px;
         justify-content: center;
 
         background-color: #0F0F0F;
