--- a/style.css
+++ b/style.css
@@ -103,9 +103,10 @@ html {
 .button {
     font-weight: bold;
     margin-top: 12px;
-    padding: 6px 12px;
+    padding: 4px 12px;
     color: white;
     background-color: #1C1C1C;
     border-radius: 8px;
     border: #343434 solid 3px;
+    text-decoration: none;
 }
